--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.6.5",
+    "howler": "^2.2.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
