--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "bootstrap-vue": "^2.1.0",
     "core-js": "^3.6.5",
     "howler": "^2.2.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.4.2",
+    "webpack": "^4.44.1"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.7.0",
